--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,12 +9,15 @@ target_sources(libcixl-tests
         libcixl-tests.cpp
         )
 
-add_compile_definitions(WITH_INTERNALS_VISIBLE)
-target_compile_definitions(libcixl-for-testing PUBLIC WITH_INTERNALS_VISIBLE)
-
 target_link_libraries(libcixl-tests PUBLIC libcixl-for-testing)
 
 target_compile_definitions(libcixl-tests PUBLIC WITH_INTERNALS_VISIBLE)
 
 
 add_test(myTest libcixl-tests)
+
+if(MSVC)
+    target_compile_options(libcixl PRIVATE /W4)
+else()
+    target_compile_options(libcixl PRIVATE -Wall -Wextra)
+endif()
